# i-score

./: #acousmoscribe.pro#  #compileDeviceManager.sh#  #mac_acousmoscribe.pro#  .cproject  .gitignore  .project  .travis.yml  AcousOut.txt  Acousmoscribe.pmproj  CMakeLists.txt  Doxyfile  FullBuild.sh  INSTALL.md  INSTALL.txt  IScoreApplication.hpp  Info.plist  LicenceCecill.txt  Makefile  PourquoiPas.xml  PourquoiPas.xml.simone  README  README.md  TestCourbes.xml  TestCourbes.xml.simone  acousmoscribe.pro  acousmoscribe.qrc  acousmoscribe2.pro  acousmoscribe2.qrc  build.sh  compile.sh  compileDeviceManager.sh  compileWithLibraries.sh  deploy_osx.sh  i-score.pro  i-score.qrc  i-scoreConfiguration.xml  i-scoreNew.pro  insertLicense.sh  kr_indent.cfg  macdeployqt  (+13 more)
Acousmoscribe.mpkg/Contents/: distribution.dist
Acousmoscribe_28_10_10.pkg/Contents/: Archive.bom  Info.plist
Examples/: testOSClearn.maxpat
Examples/Jamoma_demo/: Demo cues.maxproj  Jamoma Max patch.maxproj
Examples/PD_OSCDevice_example/: 01-basic_example.pd  01-simple_example.score  02-advancede_example.pd
Minuit/: Jamoma0.6Interface.maxpat
Minuit/Jamoma0.5/: Jamoma0.5MinuitInterface.maxpat  OSC2minuit_priority.maxpat
Minuit/MaxMSP-pattrstorage/: pattrstorage2minuit.js  readme.txt
Minuit/pure-data/: i-score.transport.pd  minuit.any.pd  minuit.device.pd  minuit.device.testing.pd
Release/: makefile  sources.mk  subdir.mk
Release/moc/: subdir.mk
acousmoscribe.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
devManChanges/: Makefile  compileForLinux.sh  compileForLinux64.sh  compileForMac.sh  compileForMac64.sh
documentation/: contextual.htm  editor.htm  editorCurves.htm  editorMessages.htm  editorProfiles.htm  editorSnapshot.htm  interaction.htm  toolbar.htm
doxygen/: Doxyfile
doxygen/html/: _abstract_8hpp.html  _abstract_8hpp_source.html  _abstract_box_8hpp_source.html  _abstract_comment_8hpp.html  _abstract_comment_8hpp_source.html  _abstract_control_box_8hpp.html  _abstract_control_box_8hpp_source.html  _abstract_curve_8hpp_source.html  _abstract_parent_box_8hpp.html  _abstract_parent_box_8hpp_source.html  _abstract_relation_8hpp_source.html  _abstract_sound_box_8hpp_source.html  _abstract_trigger_point_8hpp_source.html  _attributes_editor_8hpp_source.html  _basic_box_8hpp.html  _basic_box_8hpp_source.html  _box_context_menu_8hpp.html  _box_context_menu_8hpp_source.html  _box_curve_edit_8hpp.html  _box_curve_edit_8hpp_source.html  _box_widget_8hpp.html  _box_widget_8hpp_source.html  _choose_temporal_relation_8hpp_source.html  _comment_8hpp_source.html  _control_box_8hpp.html  _control_box_8hpp_source.html  _control_box_context_menu_8hpp.html  _control_box_context_menu_8hpp_source.html  _curve_widget_8hpp.html  _curve_widget_8hpp_source.html  _curves_widget_8hpp.html  _curves_widget_8hpp_source.html  _enum_palette_8hpp.html  _enum_palette_8hpp_source.html  _help_8hpp.html  _help_8hpp_source.html  _interpolation_8hpp.html  _interpolation_8hpp_source.html  _logarithmic_slider_8hpp.html  _logarithmic_slider_8hpp_source.html  (+205 more)
headers/: DelayedDelete.h  GlobalEventFilter.h  IScoreApplication.hpp
headers/GUI/: AttributesEditor.hpp  BasicBox.hpp  BoxContextMenu.hpp  BoxCurveEdit.hpp  BoxWidget.hpp  ChooseTemporalRelation.hpp  Comment.hpp  ConditionalRelation.hpp  ControlBox.hpp  ControlBoxContextMenu.hpp  CurveWidget.hpp  CurvesComboBox.hpp  CurvesWidget.hpp  DeviceEdit.hpp  HeaderPanelWidget.hpp  Help.hpp  Interpolation.hpp  LogarithmicSlider.hpp  MainWindow.hpp  MaquetteScene.hpp  MaquetteView.hpp  MaquetteWidget.hpp  NetworkConfig.hpp  NetworkMessagesEditor.hpp  NetworkTree.hpp  NetworkUpdater.h  ParentBox.hpp  ParentBoxContextMenu.hpp  PlayingThread.hpp  PreviewArea.hpp  Relation.hpp  RelationEdit.hpp  SoundBox.hpp  SoundBoxContextMenu.hpp  TextEdit.hpp  TimeBarWidget.hpp  TreeMap.hpp  TreeMapElement.hpp  TriggerPoint.hpp  TriggerPointEdit.hpp  (+2 more)
headers/data/: Abstract.hpp  AbstractBox.hpp  AbstractComment.hpp  AbstractControlBox.hpp  AbstractCurve.hpp  AbstractParentBox.hpp  AbstractRelation.hpp  AbstractSoundBox.hpp  AbstractTriggerPoint.hpp  Engine.h  EnumPalette.hpp  Maquette.hpp  NetworkMessages.hpp  Palette.hpp
i-score.app/Contents/: Info.plist
i-score.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
i-score/i-score.xcodeproj/: project.pbxproj
imageformats/: libqsvg.dylib
installation/: Welcome_en.rtf  Welcome_fr.rtf  computeFolder.sh  computeUbuntu64Folder.sh
installation/Acousmoscribe_MacOS_10_6.pmdoc/: 01acousmoscribe-contents.xml  01acousmoscribe.xml  index.xml
installation/installer-i-score-mpkg.pmdoc/: 01i-contents.xml  01i.xml  02iscore-contents.xml  02iscore.xml  05qtcore-contents.xml  06qtgui-contents.xml  06qtgui.xml  08qtsvg.xml  09qtnetwork.xml  10qt-contents.xml  10qt.xml  index.xml
installation/installer-i-score.pmdoc/: 01i.xml  02virage-contents.xml  02virage.xml  03gecode-contents.xml  03gecode.xml  04libxml-contents.xml  04libxml.xml  05qtcore.xml  06qtgui.xml  07qtxml-contents.xml  07qtxml.xml  08qtsvg-contents.xml  08qtsvg.xml  09qtnetwork-contents.xml  09qtnetwork.xml  10imageformats-contents.xml  10imageformats.xml  index.xml
installation/macDocs/: Conclusion_en.rtf  Conclusion_fr.rtf  Licence_en.rtf  Licence_fr.rtf  Welcome_en.rtf  Welcome_fr.rtf
installation/macDocs 2/: Conclusion_en.rtf  Conclusion_fr.rtf  Welcome_en.rtf  Welcome_fr.rtf
lib/: Engines.hpp
patchMinuit/: JamomaInterface.maxpat  minuit.device-help.pd  minuit.device.pd  minuit.device.testing.pd  minuit.num.pd  minuit.sym.pd  patch.pd
patchMinuit/MaxMSP-pattrstorage/: pattrstorage2minuit.maxhelp  pattrstorage2minuit.maxpat
patchMinuit/pure-data/: minuit.device.numbers.pd
plugins/: Minuit.dylib  OSC.dylib
resources/documentation/: editor.htm  editorGeneral.htm  editorSnapshot.htm  file.htm  help.htm  index.html  quickstart.htm  stylesheet.css  toolbar.htm
resources/doxygen/: Doxyfile
resources/images/: i-score.icns
resources/linux/: i-score.desktop
src/: IScoreApplication.cpp  main.cpp
translations/: i-score_fr.qm  i-score_fr.ts
(+1251 files in other folders)
